--- a/index.html
+++ b/index.html
@@ -212,14 +212,14 @@
       <h2>More ways to contact</h2>
       <hr class="dotted-hr">
       <div class="media-buttons">
-        <button class="btn1" onclick="window.open('https:/www.youtube.com/channel/UCaE6Q00sQQ-fDbYNhkQEzqg')" class="request-callback"><i class="fab fa-youtube" style="color:#c4302b"></i></button>
+        <button class="btn1" onclick="window.open('https:/www.youtube.com/channel/UCaE6Q00sQQ-fDbYNhkQEzqg')"><i class="fab fa-youtube" style="color:#c4302b"></i></button>
 
-        <button class="btn1" onclick="window.open('https:/www.facebook.com/profile.php?id=100044704666618')" class="request-callback"><i class="fab fa-facebook-f" style="color: skyblue;"></i></button>
+        <button class="btn1" onclick="window.open('https:/www.facebook.com/profile.php?id=100044704666618')"><i class="fab fa-facebook-f" style="color: skyblue;"></i></button>
 
-        <button class="btn1" onclick="window.open('https:/github.com/Shakhawat1998')" class="request-callback"><i class="fab fa-github" style="color: rgba(0, 0, 0, 0.274);"></i></button>
+        <button class="btn1" onclick="window.open('https:/github.com/Shakhawat1998')"><i class="fab fa-github" style="color: rgba(0, 0, 0, 0.274);"></i></button>
 
 
-        <button class="btn1" onclick="window.open('https:/mail.google.com/mail/u/0/#inbox?compose=new')" class="request-callback"><i class="fas fa-envelope-square" style="color: red;"></i></button>
+        <button class="btn1" onclick="window.open('https:/mail.google.com/mail/u/0/#inbox?compose=new')"><i class="fas fa-envelope-square" style="color: red;"></i></button>
 
 
       </div>
